--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "moonlandsoft/yii2-phpexcel",
+    "name": "dingmuqi/yii2-phpexcel",
     "description": "Exporting PHP to Excel or Importing Excel to PHP",
     "type": "yii2-extension",
     "keywords": ["yii2","extension","excel","xls","export","import"],
@@ -16,7 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "moonland\\phpexcel\\": ""
+            "dingmuqi\\phpexcel\\": ""
         }
     }
 }
