--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "phpoffice/phpspreadsheet": "~1.0"
+        "phpoffice/phpspreadsheet": "*"
     },
     "autoload": {
         "psr-4": {
